Fixed teacup spacing and added click me msg for pg 4

--- a/day3.css
+++ b/day3.css
@@ -254,8 +254,8 @@ p {
   }
 
   .icon {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
   }
 
   .slide-row {
